<resources>
    <string name="app_name">CalendarApp</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>

    <string name="Lorem">Lorem</string>
    <string name="detailsHeader">Details</string>

    <item type="id" name="tagDayDate">DAY_DATE</item>
    <item type="id" name="tagDate">DATE</item>

    <string name="title">title</string>
    <string name="titleHeader">Title</string>
    <string name="description">description</string>
    <string name="descriptionHeader">Description</string>

    <string name="hintTitle">Title of Event</string>
    <string name="hintDescription">Description of Event</string>

    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="startTimeHeader">Start Time</string>
    <string name="endTimeHeader">End Time</string>

    <string name="selectTime">Select Time</string>
</resources>
