<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:id="@+id/dayDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/saturday" />

        <View
            android:id="@+id/horizontalBar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#D3D3D3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rvHeader"
            android:text="@string/titleHeader"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/rvStartTimeHeader"
            android:text="@string/startTimeHeader"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/rvEndTimeHeader"
            android:text="@string/endTimeHeader"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/eventsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    >

                </android.support.v7.widget.RecyclerView>
        </ScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="20dp"
                android:src="@drawable/ic_add_white_24dp" />
        </FrameLayout>




</LinearLayout>



